--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -76,6 +76,9 @@
 @import 'components/email/email-read';
 @import 'components/email/email-compose';
 
+//Pages
+@import 'pages/pages';
+
 
 // Plugin overrides
 @import "components/plugin-overrides/ace";
