--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -480,3 +480,358 @@
     }
   }
 }
+
+.navbar-home {
+  .navbar-content {
+    @include display-flex();
+    width: 100%;
+    height: 100%;
+    padding-left: 25px;
+    padding-right: 25px;
+    @media(max-width: 991px) {
+      width: calc(100% - #{$sidebar-folded-width} - 1px);
+    }
+    .navbar-nav {
+      @include display-flex;
+      @include flex-direction(row);
+      margin-left: auto;
+      .nav-item {
+        position: relative;
+        margin-left: 5px;
+        margin-right: 5px;
+        min-width: 30px;
+        @include display-flex;
+        @include align-items(center);
+        .nav-link {
+          color: #535353;
+          padding: 0;
+          position: relative;
+          margin-left: auto;
+          margin-right: auto;
+          &:hover,
+          &[aria-expanded="true"] {
+            color: theme-color(primary);
+          }
+          &::after {
+            display: none;
+          }
+          svg {
+            width: 20px;
+            height: 20px;
+          }
+          .indicator {
+            position: absolute;
+            top: 0px;
+            right: 2px;
+            .circle {
+                background: theme-color(primary);
+                width: 7px;
+                height: 7px;
+                border-radius: 50%;
+                &::before {
+                    background-color: theme-color(primary);
+                    content: "";
+                    display: table;
+                    border-radius: 50%;
+                    position: absolute;
+                    @extend .pulse;
+                }
+            }
+          }
+        }
+        &.dropdown {
+          @media(max-width: 767px) {
+            position: static;
+          }
+          .dropdown-menu {
+            max-width: 180px;
+            position: absolute;
+            right: -20px;
+            left: auto;
+            border-radius: 0;
+            margin-top: 0;
+            border: 1px solid #f2f4f9;
+            box-shadow: 0 5px 10px 0 rgba(183,192,206,.2);            
+            @extend .dropdownAnimation;
+            font-size: .875rem;
+            &::before {
+              content: '';
+              width: 13px;
+              height: 13px;
+              background: #fff;
+              position: absolute;
+              top: -7px;
+              right: 28px;
+              transform: rotate(45deg);
+              border-top: 1px solid #f2f4f9;
+              border-left: 1px solid #f2f4f9;
+            }
+            @media(max-width: 767px) {
+              right: 20px;
+              width: calc(100% - 40px);
+              &::before{
+                display: none;
+              }
+            }
+          }
+        }
+        &.nav-apps {
+          .dropdown-menu {
+            .dropdown-body {
+              .apps {
+                a {
+                  color: $body-color;
+                  width: 65px;
+                  height: 65px;
+                  @include display-flex;
+                  @include flex-direction(column);
+                  @include align-items(center);
+                  @include justify-content(center);
+                  transition: all .2s ease-in-out;
+                  svg {
+                    color: $text-muted;
+                  }
+                  p {
+                    font-size: 12px;
+                    margin-top: 5px;
+                    color: $text-muted;
+                  }
+                  &:hover {
+                    background-color: lighten(theme-color(primary), 27%);    
+                    svg { 
+                      color: theme-color(primary);  
+                    }             
+                  }
+                }
+              }
+            }
+          }
+        }
+        &.nav-apps,
+        &.nav-notifications,
+        &.nav-messages {
+          .dropdown-menu {
+            padding: 0;
+            .dropdown-header {
+              padding: 12px 20px;
+              font-size: 13px;
+            }
+            .dropdown-body {
+              padding: 5px;
+              max-height: 300px;
+              position: relative;
+              .dropdown-item {
+                @include display-flex;
+                @include align-items(center);
+                padding: 9px 16px;
+                transition: background .2s ease-in-out;
+                &:hover {
+                  background: rgb(248, 248, 248);
+                  .arrow {
+                    color: theme-color(primary);
+                  }
+                }
+                .icon {
+                  width: 30px;
+                  height: 30px;
+                  border-radius: 50%;
+                  @include display-flex;
+                  @include align-items(center);
+                  @include justify-content(center);
+                  background: rgb(247, 247, 247);
+                  svg {
+                    width: 15px;
+                    height: 15px;
+                  }
+                }
+                .figure {
+                  img {
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                  }
+                }
+                &:nth-child(1) {
+                  &:hover {
+                    background: rgba(theme-color(primary), .07);  
+                    .arrow {
+                      color: theme-color(primary);                                        
+                    }                                      
+                  }
+                  .icon {
+                    background: rgba(theme-color(primary), .1);
+                    svg {
+                      color: theme-color(primary);
+                    }
+                  }
+                }
+                &:nth-child(2) {
+                  &:hover {
+                    background: rgba(theme-color(success), .07);
+                    .arrow {
+                      color: theme-color(success);                                        
+                    }                                        
+                  }
+                  .icon {
+                    background: rgba(theme-color(success), .1);
+                    svg {
+                      color: theme-color(success);
+                    }
+                  }
+                }
+                &:nth-child(3) {
+                  &:hover {
+                    background: rgba(theme-color(danger), .07);    
+                    .arrow {
+                      color: theme-color(danger);                                        
+                    }                                    
+                  }
+                  .icon {
+                    background: rgba(theme-color(danger), .1);
+                    svg {
+                      color: theme-color(danger);
+                    }
+                  }
+                }
+                &:nth-child(4) {
+                  &:hover {
+                    background: rgba(theme-color(warning), .07);    
+                    .arrow {
+                      color: theme-color(warning);                                        
+                    }                                     
+                  }
+                  .icon {
+                    background: rgba(theme-color(warning), .1);
+                    svg {
+                      color: theme-color(warning);
+                    }
+                  }
+                }
+                &:nth-child(5) {
+                  &:hover {
+                    background: rgba(theme-color(info), .07);    
+                    .arrow {
+                      color: theme-color(info);                                        
+                    }                                     
+                  }
+                  .icon {
+                    background: rgba(theme-color(info), .1);
+                    svg {
+                      color: theme-color(info);
+                    }
+                  }
+                }
+                &:nth-child(6) {
+                  &:hover {
+                    background: rgba(theme-color(success), .07);
+                    .arrow {
+                      color: theme-color(success);                                        
+                    }                                     
+                  }
+                  .icon {
+                    background: rgba(theme-color(success), .1);
+                    svg {
+                      color: theme-color(success);
+                    }
+                  }
+                }
+                &:nth-child(7) {
+                  &:hover {
+                    background: rgba(theme-color(danger), .07);
+                    .arrow {
+                      color: theme-color(danger);                                        
+                    }                                     
+                  }
+                  .icon {
+                    background: rgba(theme-color(danger), .1);
+                    svg {
+                      color: theme-color(danger);
+                    }
+                  }
+                }
+                .content {
+                  margin-left: 15px;
+                  width: 200px;
+                  white-space: normal;
+                  p {
+                    margin-bottom: 0;
+                  }
+                  .sub-text {
+                    font-size: 12px;
+                  }
+                }
+                .arrow {
+                  width: 15px;
+                  height: 15px;
+                  margin-left: auto;
+                  color: #ddd;
+                  transition: all .3s ease-out;
+                }
+              }
+            }
+            .dropdown-footer {
+              padding: 10px 20px;
+              border-top: 1px solid #f2f4f9;
+              font-size: 14px;
+            }
+          }
+        }
+        &.nav-profile {
+          .nav-link {
+            img {
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+            }
+          }
+          .dropdown-menu {
+            min-width: 160px;
+            @media(max-width: 767px) {
+              width: auto;
+            }
+            .dropdown-body {
+              .profile-nav {
+                .nav-item {
+                  width: auto;
+                  margin: 0 0 5px 0;
+                  &:last-child {
+                    margin-bottom: 0;
+                  }
+                  .nav-link {
+                    @include display-flex;
+                    @include align-items(center);
+                    margin-left: 0;
+                    margin-right: 0;
+                    color: #383838;
+                    transition: color .2s ease-in-out;
+                    svg {
+                      width: 16px;
+                      height: 16px;
+                      margin-right: 20px;
+                    }
+                    span {
+                      font-size: 14px;
+                      margin-top: 2px;
+                    }
+                  }
+                  &:hover {
+                    .nav-link {
+                      color: #3764f8;
+                    }
+                  }
+                }
+              }
+              button {
+                svg {
+                  width: 15px;
+                  height: 15px;
+                  margin-right: 5px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
